tests/baselines/reference/privateNameInTypeQuery.errors.txt
privateNameInTypeQuery.ts(6,15): error TS2322: Type 'number' is not assignable to type 'this["a"]'.
  'this["a"]' could be instantiated with an arbitrary type which could be unrelated to 'number'.
privateNameInTypeQuery.ts(9,15): error TS2322: Type 'number' is not assignable to type 'this[#b]'.
  'this[#b]' could be instantiated with an arbitrary type which could be unrelated to 'number'.
privateNameInTypeQuery.ts(16,19): error TS18016: Private identifiers are not allowed outside class bodies.


==== privateNameInTypeQuery.ts (3 errors) ====
    class C {
        a = 'a';
        #b = 'b';
    
        constructor() {
            const a: typeof this['a'] = 1;
                  ~
!!! error TS2322: Type 'number' is not assignable to type 'this["a"]'.
!!! error TS2322:   'this["a"]' could be instantiated with an arbitrary type which could be unrelated to 'number'.
            const b: typeof this['a'] = ''; // ok
    
            const c: typeof this[#b]  = 1;
                  ~
!!! error TS2322: Type 'number' is not assignable to type 'this[#b]'.
!!! error TS2322:   'this[#b]' could be instantiated with an arbitrary type which could be unrelated to 'number'.
            const d: typeof this[#b] = '';  // ok
        }
    }
    
    const c = new C();
    const a: typeof c['a'] = '';
    const b: typeof c[#b]  = '';
                      ~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    